third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/hour-over.stderr
TOML parse error at line 2, column 15
  |
2 | d = 2006-01-01T24:00:00-00:00
  |               ^
expected newline, `#`
